--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install TeX Live
-        runs: |
+        run: |
           sudo apt update
           sudo apt install -y biber texlive-base texlive-latex-recommended texlive-latex-extra texlive-science
       
@@ -34,7 +34,7 @@ jobs:
             main.toc
 
       - name: Compile PDF File
-        runs: latexmk -pdflatex -interaction=nonstopmode -file-line-error main.tex
+        run: latexmk -pdflatex -interaction=nonstopmode -file-line-error main.tex
 
       - name: Store Cache Files
         uses: actions/cache/save@v4
