--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: |
-            biber
-            texlive-base
-            texlive-latex-recommended
-            texlive-latex-extra
-            texlive-science
-            latexmk
-            ghostscript
+            texlive-full
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
