--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,9 @@ jobs:
       
       - name: Install TeX Packages
         run: |
-          sudo tlmgr install extarrows
-          sudo tlmgr install fontawesome5
+          tlmgr init-usertree
+          tlmgr install extarrows
+          tlmgr install fontawesome5
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
@@ -85,8 +86,9 @@ jobs:
       
       - name: Install TeX Packages
         run: |
-          sudo tlmgr install extarrows
-          sudo tlmgr install fontawesome5
+          tlmgr init-usertree
+          tlmgr install extarrows
+          tlmgr install fontawesome5
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
