--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,19 +19,13 @@ jobs:
       - name: Install TeX Live
         run: |
           sudo apt update
-          sudo apt install -y texlive-latex-extra
+          sudo apt install -y texlive-latex-extra texlive-science texlive-fonts-extra
 
       - name: Install TeX Extras
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: |
             latexmk
-      
-      - name: Install TeX Packages
-        run: |
-          tlmgr init-usertree
-          tlmgr install extarrows
-          tlmgr install fontawesome5
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
@@ -76,19 +70,13 @@ jobs:
       - name: Install TeX Live
         run: |
           sudo apt update
-          sudo apt install -y texlive-latex-extra
+          sudo apt install -y texlive-latex-extra texlive-science texlive-fonts-extra
 
       - name: Install TeX Extras
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: |
             latexmk
-      
-      - name: Install TeX Packages
-        run: |
-          tlmgr init-usertree
-          tlmgr install extarrows
-          tlmgr install fontawesome5
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
