--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,16 +16,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install TeX Live
+      - name: Install TeX Live Base
         run: |
           sudo apt update
-          sudo apt install -y texlive-latex-extra texlive-science texlive-fonts-extra
+          sudo apt install -y texlive-latex-base
 
       - name: Install TeX Extras
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: |
             latexmk
+            texlive-latex-extra
+            texlive-science
+            texlive-fonts-extra
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
@@ -70,7 +73,15 @@ jobs:
       - name: Install TeX Live
         run: |
           sudo apt update
-          sudo apt install -y texlive-latex-extra texlive-science texlive-fonts-extra texlive-extra-utils
+          sudo apt install -y texlive-latex-base
+
+      - name: Install TeX Extras
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: |
+            texlive-latex-extra
+            texlive-science
+            texlive-fonts-extra
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
