oopsie, missed dependencies for make4ht.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
             texlive-latex-extra
             texlive-science
             texlive-fonts-extra
+            texlive-extra-utils
       
       - name: Restore Cache Files
         uses: actions/cache/restore@v4
