now things should be working ... hopefully

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,23 +33,23 @@ jobs:
 
       - name: Compile PDF File
         id: compile-pdflatex
-        run: latexmk -pdflatex -interaction=nonstopmode -file-line-error main.tex
+        run: latexmk -pdflatex -interaction=nonstopmode -file-line-error -jobname=latest main.tex
       
       - name: Upload PDF file
         id: upload-pdf
         uses: actions/upload-artifact@v4
         with:
           name: PDF
-          path: main.pdf
+          path: latest.pdf
 
       - name: Compile Webpage File
         id: compile-make4ht
-        run: make4ht -u -d webpage main.tex "mathml"
+        run: make4ht -u -d webpage -j index main.tex "mathml"
 
       - name: Build Webpage Folder
         id: create-webpage-folder
         run:
-          cp main.pdf webpage/latest.pdf
+          cp latest.pdf webpage/latest.pdf
       
       - name: Upload static files as artifact
         id: upload-webpage
