--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,18 +33,18 @@ jobs:
 
       - name: Compile PDF File
         id: compile-pdflatex
-        run: latexmk -pdflatex -interaction=nonstopmode -file-line-error -jobname=latest main.tex
+        run: latexmk -pdflatex -interaction=nonstopmode -file-line-error -jobname=pdf/latest main.tex
       
       - name: Upload PDF file
         id: upload-pdf
         uses: actions/upload-artifact@v4
         with:
           name: PDF
-          path: latest.pdf
+          path: pdf/latest.pdf
 
       - name: Compile Webpage File
         id: compile-make4ht
-        run: make4ht -u -d webpage -j index main.tex "mathml"
+        run: make4ht -a debug -u -d webpage -j index main.tex "mathml,4"
 
       - name: Build Webpage Folder
         id: create-webpage-folder
