--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,11 @@ jobs:
             latexmk
           execute_install_scripts: true
 
+      - name: Create Output Folder
+        id: create-output-folder
+        run: |
+          mkdir -p pdf
+
       - name: Compile PDF File
         id: compile-pdflatex
         run: latexmk -pdflatex -interaction=nonstopmode -file-line-error -output-directory=pdf -jobname=latest main.tex
