--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Compile Webpage File
         id: compile-make4ht
-        run: make4ht -a debug -u -d webpage -j index main.tex "mathml,4"
+        run: make4ht -a info -u -d webpage -j index main.tex "mathml,4"
 
       - name: Build Webpage Folder
         id: create-webpage-folder
