--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Compile Webpage File
         id: compile-make4ht
-        run: make4ht -a info -u -d webpage -j index main.tex "mathml,4"
+        run: make4ht -a info -u -d webpage -j index -c config.cfg main.tex
         continue-on-error: true
 
       - name: Create Webpage Folder
