fix: image display issues by switching to mathjax output.

--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,5 @@
-\Preamble{xhtml,mathml,4,sections+}
+\Preamble{xhtml,mathjax,4,sections+}
+\Configure{MathJaxMacros}{macros.tex} 
 \Configure{TITLE+}{\Author\space|\space\Title}
 \Configure{chapterTITLE+}{\Title\space|\space#1}
 \Configure{likechapterTITLE+}{\Title\space|\space#1}
