--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,6 @@
 \Preamble{xhtml,mathjax,4,sections+}
-\Configure{MathJaxMacros}{macros.tex} 
+\Css{body{margin:1em auto; max-width:120ch; padding:0.62em; }}
+\Configure{MathJaxMacros}{macros.tex}
 \Configure{TITLE+}{\Author\space|\space\Title}
 \Configure{chapterTITLE+}{\Title\space|\space#1}
 \Configure{likechapterTITLE+}{\Title\space|\space#1}
